# streaming-compressor-rust

./: .gitignore  ARCHITECTURE.md  BACKEND_INTEGRATION.md  BENCHMARK_RESULTS.md  CLI_USAGE.md  Cargo.toml  FUTURE_ENHANCEMENTS.md  README.md  WASM_SUMMARY.md  bench.sh  benchmark.sh  benchmark_results.txt  package-lock.json  package.json
cli/: Cargo.toml
cli/src/: fs_provider.rs  lib.rs  main.rs  manifest_io.rs  publisher.rs  reassembler.rs  walker.rs
core/: Cargo.toml
core/src/: compressor.rs  detection.rs  lib.rs  progress.rs  publisher.rs  reassembler.rs  stream.rs
core/src/manifest/: builder.rs  io.rs  mod.rs  types.rs  walker.rs
docs/: IMPLEMENTATION_PLAN.md  WALKTHROUGH.md  assembler_diagram.md  implementation_plan.md  task.md  walkthrough.md
src/: assembler.rs  compressor.rs  lib.rs  main.rs  publisher.rs  reassembler.rs
src/manifest/: mod.rs  walker.rs
video-extractor/: PRODUCT_VISION.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
video-extractor/src/: extract-worker.ts  extractor.ts  frame-renderer.ts  index.ts  ogg-muxer.ts  types.ts  upload-video.ts  uploader.ts  webcodecs-audio.d.ts
wasm/: Cargo.toml  example_streaming_upload.js  package.json  tsconfig.json  vite.config.ts  worker.js
wasm/src/: lib.rs
wasm/ts/: index.ts  uploader.ts  worker.ts
