[package]
name = "compressor"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
tempfile = "3"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jwalk = "0.8"
anyhow = "1"
blake3 = "1"
zstd = "0.13.3"
rayon = "1.11.0"
clap = { version = "4.6.0", features = ["derive"] }
tempfile = "3"
