[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
core = { path = "../core" }
anyhow = "1"
clap = { version = "4.6.0", features = ["derive"] }
indicatif = "0.17"
jwalk = "0.8"
rayon = "1.11.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
zstd = "0.13"
tempfile = "3"
