[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
blake3 = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
zstd = "0.13"
rayon = "1.11.0"
jwalk = "0.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
lz4_flex = "0.11"

[dev-dependencies]
tempfile = "3"
